Bug 147451 - Crash when click hyperlink to file
Summary: Crash when click hyperlink to file
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.1.8.1 release
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0
Keywords: haveBacktrace
Depends on:
Blocks: Calc-large-spreadsheets
  Show dependency treegraph
 
Reported: 2022-02-15 21:30 UTC by raal
Modified: 2022-02-17 16:01 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
test file (50.72 KB, application/vnd.oasis.opendocument.spreadsheet)
2022-02-15 21:31 UTC, raal
Details
target file (9.41 KB, application/vnd.oasis.opendocument.spreadsheet)
2022-02-15 21:31 UTC, raal
Details
Backtrace (31.26 KB, text/plain)
2022-02-15 23:00 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2022-02-15 21:30:25 UTC
Description:
Crash when click hyperlink to file. Hyperlink lead to local file (in /tmp in my case). Tested in bibisect/linux-64-7.4 and the bug is in oldest and master. The bug is not in bibisect/linux-64-7.3 oldest either master.

Steps to Reproduce:
 - new calc file
 - insert hyperlink
  	- type Document
  	- in Path point to file (ods in my case)
  	- in field Target select sheet
  	-  add text
  - click hyperlink (ctrl + mouse click)

Actual Results:
Crash

Expected Results:
open file


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.3.0.0.alpha1+ / LibreOffice Community
Build ID: 229123ccc6f90ebf66b3e659bebbd53f8a9bdd3a
CPU threads: 4; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded Jumbo
Comment 1 raal 2022-02-15 21:31:21 UTC
Created attachment 178297 [details]
test file

file contains hyperlink to file /tmp/base.ods
Comment 2 raal 2022-02-15 21:31:57 UTC
Created attachment 178298 [details]
target file

put this file in the /tmp folder
Comment 3 raal 2022-02-15 21:37:03 UTC
@Luboš: this is the "Calc: threaded Jumbo" problem. No crash in Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 2f0c26dc83448a934af5383f9f6b7a607c334744
CPU threads: 4; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 4 Roman Kuznetsov 2022-02-15 21:58:51 UTC
No crash (I used my own files for the hyperlink creating)

Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 0bf0feb40ae5c394a14cdfe4f94fb98dd9053597
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: CL Jumbo
Comment 5 Aron Budea 2022-02-15 22:59:55 UTC
(In reply to raal from comment #0)
> master. The bug is not in bibisect/linux-64-7.3 oldest either master.
I could reproduce in current commits of the 7.3, 7.2, 7.1 bibisect repos. I didn't go back further.

Also in a recent build from the dev branch:

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 8311159f9d2a259e1bc1a051cceef007c71866a1
CPU threads: 16; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded Jumbo

Attaching backtrace from a debug build.
Also, a couple of interesting warnings, esp. near the end:

warn:sfx.control:438294:438294:sfx2/source/control/dispatch.cxx:1206: Childwindow slot missing: 25917
warn:sfx.control:438294:438294:sfx2/source/control/dispatch.cxx:1206: Childwindow slot missing: 25917
warn:sfx.control:438294:438294:sfx2/source/control/dispatch.cxx:1206: Childwindow slot missing: 25917
warn:sfx.control:438294:438294:sfx2/source/control/dispatch.cxx:1206: Childwindow slot missing: 25917
warn:legacy.osl:438294:438294:sc/source/core/data/document.cxx:4737: Attribute Null
warn:legacy.osl:438294:438294:sc/source/core/data/document.cxx:4737: Attribute Null
warn:legacy.osl:438294:438294:sc/source/core/data/table2.cxx:2199: wrong column or row
warn:legacy.osl:438294:438294:sc/source/core/data/table2.cxx:2199: wrong column or row
warn:sfx.view:438294:438294:sfx2/source/view/frmload.cxx:489: DBG_UNHANDLED_EXCEPTION in impl_handleCaughtError_nothrow exception: com.sun.star.lang.IndexOutOfBoundsException message: "at /home/valaki/projects/libreoffice/sc/source/ui/Accessibility/AccessibleTableBase.cxx:275"
warn:legacy.osl:438294:438294:vcl/source/window/window.cxx:262: Window ( 23SfxFrameViewWindow_Impl()) with live children destroyed:  9ScrollBar() 9ScrollBar() 14ScCornerButton()
Window ( 23SfxFrameViewWindow_Impl()) with live children destroyed:  9ScrollBar() 9ScrollBar() 14ScCornerButton()
Comment 6 Aron Budea 2022-02-15 23:00:42 UTC
Created attachment 178299 [details]
Backtrace
Comment 7 Aron Budea 2022-02-15 23:01:31 UTC
(In reply to raal from comment #2)
> Created attachment 178298 [details]
> target file
> 
> put this file in the /tmp folder
Also, my experience is that this has to be put in the same folder as the other file.
Comment 8 raal 2022-02-15 23:08:50 UTC
(In reply to Aron Budea from comment #7)
> (In reply to raal from comment #2)
> > Created attachment 178298 [details]
> > target file
> > 
> > put this file in the /tmp folder
> Also, my experience is that this has to be put in the same folder as the
> other file.

Confirm, both of my files are in /tmp folder.
Comment 9 Commit Notification 2022-02-17 16:01:05 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7bb0b11873d0c96d8116b327987834db048754c3

fix range checking when parsing Calc cell address (tdf#147451)

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.