sc/qa/unit/range.cxx
@@ -28,9 +28,11 @@ public:
 
     CPPUNIT_TEST_SUITE(ScAddressTest);
     CPPUNIT_TEST(testAddressParsing);
+    CPPUNIT_TEST(testTdf147451);
     CPPUNIT_TEST_SUITE_END();
 
     void testAddressParsing();
+    void testTdf147451();
 
 private:
     ScDocShellRef m_xDocShRef;
@@ -41,6 +43,15 @@ void ScAddressTest::testAddressParsing()
     ScAddress aAddr;
     ScDocument& rDoc = m_xDocShRef->GetDocument();
     ScRefFlags nRes = aAddr.Parse("1", rDoc, formula::FormulaGrammar::CONV_OOO);
+    CPPUNIT_ASSERT_MESSAGE("Should fail to parse.", !(nRes & ScRefFlags::VALID));
+}
+
+void ScAddressTest::testTdf147451()
+{
+    ScAddress aAddr;
+    ScDocument& rDoc = m_xDocShRef->GetDocument();
+    // "Sheet1" is technically a valid address like "XF1", but it should overflow.
+    ScRefFlags nRes = aAddr.Parse("Sheet1", rDoc, formula::FormulaGrammar::CONV_OOO);
     CPPUNIT_ASSERT_MESSAGE("Should fail to parse.", !(nRes & ScRefFlags::VALID));
 }
 
